- [fix] serial ports that are not of COMnn format now do not causes errors. If a serial port is for example name COMB13, then it will not be able to be used
- [fix] notch popup window will be shifted so that it is visible when close to the edge of a screen
- [fix] fix filter width crash under certain conditions in the filter config form

## v2.10.3.8 - Change Log
- [fix] maintain delta checkbox now greyed if adjust min to noise floor is unchecked
- [fix] filter view now updates when zzfl etc cat commands are used
- [fix] refactored waterfall colour min/max for filterview. Fixes issues with high AGC offsets
- [fix] rx2 containers will not show if rx2 is disabled and the console window is restored from a minimised state
- [fix] fixed issue with DB manager, where dbman.json would not be loaded correctly if a radio model was added/removed from the code. Now defaults to HERMES if model not found, ie HL2
- [fix] vac tx gains are min/max validated. To prevent crash/error with the HL2 modified version that is able to assign mic gain to tx vac gain
- [fix] fixed vfoB frequency limit issue and potential crash issue when using xvtr slot vhf0

## v2.10.3.7 Change Log
- [add] new auto attenuate TX when PS is off options in Setup->Ant/Filters->Antenna
- [add] new auto attenuate RX options in Setup->General->Options-1. If the undo option is used the attenuation will be unwound in the order originally applied after each delay period
- [add] Discord integration, let others know when you are on air using the Discord button box. Get scrolling text for #general and #thetis-bot. Config in Setup->Networking->Discord
- [add] Backup prune implemented GFS (grandfather, father son). Check to enable in the DBMan form (bottom right). Tool tip explains all
- [add] font colour added to button boxes (except for antenna box)
- [add] click colour added to button boxes (default orange)
- [add] warning shown in Linearity form if SetPk is different to that expected for the hardware